--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        quiet true
+        abortOnError false
+        ignoreWarnings false
+        checkAllWarnings true
+        showAll true
+        textReport false
+        xmlReport false
+        htmlReport true
+        checkReleaseBuilds true
+        lintConfig file("..\\lint.xml")
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.lge.developer:qpair-apis:1.0.0'
 }
