--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,39 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        /*debug {
+            storeFile file("../android/debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }*/
+        release {
+            storeFile file("../android/debug.keystore")
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
+
     buildTypes {
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+            //signingConfig signingConfigs.debug
+        }
         release {
             runProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
+    }
+
+    // Is this needed?
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
     }
 
     lintOptions {
